Fix landing page app right-click flickering and persistence

--- a/katana/wui/core/static/core/css/main.css
+++ b/katana/wui/core/static/core/css/main.css
@@ -407,6 +407,7 @@ span.close:before {
 	border-radius: 27px;
 	color: #6b6b6b;
 	background: rgba(255, 255, 255, 0.95);
+	opacity: .9;
 	-webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.22);
 	-moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.22);
 	box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.22);
@@ -549,7 +550,7 @@ span.close:before {
 }
 
 .page-content .tab:hover {
-	opacity: .9;
+	opacity: 1;
 	-webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.22);
 	-webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.22);
 	box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.22);
